name:                ghcjs-typedarray
version:             0.1.0.0
synopsis:            Bindings for working with JavaScript TypedArray objects in GHCJS
description:         Bindings for working with JavaScript TypedArray objects in GHCJS
homepage:            github.com/isomorphism/ghcjs-typedarray
license:             MIT
license-file:        LICENSE
author:              C. A. McCann
maintainer:          cam@uptoisomorphism.net
copyright:           C. A. McCann
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     GHCJS.TypedArray
  build-depends:       base >= 4.7 && < 4.8,
                       ghcjs-base >= 0.1 && < 0.2
  hs-source-dirs:      src
  default-language:    Haskell2010